src/main/java/uk/ac/ucl/cs/radar/parser/generated/ModelParser.java
// Generated from Model.g4 by ANTLR 4.5.1
package uk.ac.ucl.cs.radar.parser.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, NOT=44, AND=45, OR=46, 
		HexLiteral=47, DecimalLiteral=48, OctalLiteral=49, FloatingPointLiteral=50, 
		CharacterLiteral=51, StringLiteral=52, Identifier=53, COMMENT=54, LINE_COMMENT=55, 
		NEWLINE=56, SINGLESPACE=57, WS=58;
	public static final int
		RULE_model = 0, RULE_model_element = 1, RULE_objective_decl = 2, RULE_objective_def = 3, 
		RULE_constraint_decl = 4, RULE_constraint_argument = 5, RULE_quality_var_decl = 6, 
		RULE_quality_var_def = 7, RULE_decision_def = 8, RULE_decision_body = 9, 
		RULE_option_name = 10, RULE_option_def = 11, RULE_parameter_def = 12, 
		RULE_distribution = 13, RULE_distribution_args = 14, RULE_distribution_arg = 15, 
		RULE_arithmetic_expr = 16, RULE_comparision = 17, RULE_number = 18, RULE_integerLiteral = 19, 
		RULE_optimisationDirection = 20, RULE_comparator = 21, RULE_var_name = 22;
	public static final String[] ruleNames = {
		"model", "model_element", "objective_decl", "objective_def", "constraint_decl", 
		"constraint_argument", "quality_var_decl", "quality_var_def", "decision_def", 
		"decision_body", "option_name", "option_def", "parameter_def", "distribution", 
		"distribution_args", "distribution_arg", "arithmetic_expr", "comparision", 
		"number", "integerLiteral", "optimisationDirection", "comparator", "var_name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Model'", "';'", "'Objective'", "'='", "'with'", "'margin'", "'EV'", 
		"'('", "')'", "'Pr'", "'percentile'", "'-'", "'+'", "','", "'Constraint'", 
		"'requires'", "'excludes'", "'couples'", "':'", "'decision'", "'decision-subset'", 
		"'*'", "'{'", "'}'", "'deterministic'", "'normal'", "'normalCI'", "'geometric'", 
		"'exponential'", "'random'", "'uniform'", "'triangular'", "'^'", "'/'", 
		"'%'", "'Max'", "'Min'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "NOT", "AND", "OR", "HexLiteral", 
		"DecimalLiteral", "OctalLiteral", "FloatingPointLiteral", "CharacterLiteral", 
		"StringLiteral", "Identifier", "COMMENT", "LINE_COMMENT", "NEWLINE", "SINGLESPACE", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Model.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public List<Model_elementContext> model_element() {
			return getRuleContexts(Model_elementContext.class);
		}
		public Model_elementContext model_element(int i) {
			return getRuleContext(Model_elementContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(T__0);
			setState(47);
			var_name();
			setState(48);
			match(T__1);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(49);
				match(NEWLINE);
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__14) | (1L << Identifier))) != 0)) {
				{
				{
				setState(55);
				model_element();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Model_elementContext extends ParserRuleContext {
		public Model_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_element; }
	 
		public Model_elementContext() { }
		public void copyFrom(Model_elementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModelObjectiveListContext extends Model_elementContext {
		public List<Objective_declContext> objective_decl() {
			return getRuleContexts(Objective_declContext.class);
		}
		public Objective_declContext objective_decl(int i) {
			return getRuleContext(Objective_declContext.class,i);
		}
		public ModelObjectiveListContext(Model_elementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModelObjectiveList(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ModelConstraintContext extends Model_elementContext {
		public List<Constraint_declContext> constraint_decl() {
			return getRuleContexts(Constraint_declContext.class);
		}
		public Constraint_declContext constraint_decl(int i) {
			return getRuleContext(Constraint_declContext.class,i);
		}
		public ModelConstraintContext(Model_elementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModelConstraint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ModelQualityVariableListContext extends Model_elementContext {
		public List<Quality_var_declContext> quality_var_decl() {
			return getRuleContexts(Quality_var_declContext.class);
		}
		public Quality_var_declContext quality_var_decl(int i) {
			return getRuleContext(Quality_var_declContext.class,i);
		}
		public ModelQualityVariableListContext(Model_elementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModelQualityVariableList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Model_elementContext model_element() throws RecognitionException {
		Model_elementContext _localctx = new Model_elementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model_element);
		try {
			int _alt;
			setState(76);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new ModelObjectiveListContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(61);
						objective_decl();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(64); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case Identifier:
				_localctx = new ModelQualityVariableListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(67); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(66);
						quality_var_decl();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(69); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case T__14:
				_localctx = new ModelConstraintContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(72); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(71);
						constraint_decl();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(74); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Objective_declContext extends ParserRuleContext {
		public OptimisationDirectionContext optimisationDirection() {
			return getRuleContext(OptimisationDirectionContext.class,0);
		}
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public Objective_defContext objective_def() {
			return getRuleContext(Objective_defContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public Objective_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objective_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjective_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Objective_declContext objective_decl() throws RecognitionException {
		Objective_declContext _localctx = new Objective_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_objective_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__2);
			setState(79);
			optimisationDirection();
			setState(80);
			var_name();
			setState(83);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(81);
				match(T__3);
				setState(82);
				objective_def();
				}
			}

			setState(89);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(85);
				match(T__4);
				setState(86);
				number();
				setState(87);
				match(T__5);
				}
			}

			setState(91);
			match(T__1);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(92);
				match(NEWLINE);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Objective_defContext extends ParserRuleContext {
		public Objective_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objective_def; }
	 
		public Objective_defContext() { }
		public void copyFrom(Objective_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ObjectiveBooleanProbabilityContext extends Objective_defContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectiveBooleanProbabilityContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectiveBooleanProbability(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectiveExpectationContext extends Objective_defContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectiveExpectationContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectiveExpectation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectivePercentileContext extends Objective_defContext {
		public Token op;
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectivePercentileContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectivePercentile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectiveProbabilityContext extends Objective_defContext {
		public ComparisionContext comparision() {
			return getRuleContext(ComparisionContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectiveProbabilityContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectiveProbability(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Objective_defContext objective_def() throws RecognitionException {
		Objective_defContext _localctx = new Objective_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_objective_def);
		int _la;
		try {
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new ObjectiveExpectationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(T__6);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(99);
					match(SINGLESPACE);
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(105);
				match(T__7);
				setState(106);
				var_name();
				setState(107);
				match(T__8);
				}
				break;
			case 2:
				_localctx = new ObjectiveBooleanProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(T__9);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(110);
					match(SINGLESPACE);
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116);
				match(T__7);
				setState(117);
				var_name();
				setState(118);
				match(T__8);
				}
				break;
			case 3:
				_localctx = new ObjectiveProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				match(T__9);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(121);
					match(SINGLESPACE);
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(127);
				match(T__7);
				setState(128);
				comparision();
				setState(129);
				match(T__8);
				}
				break;
			case 4:
				_localctx = new ObjectivePercentileContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				match(T__10);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(132);
					match(SINGLESPACE);
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138);
				match(T__7);
				setState(140);
				_la = _input.LA(1);
				if (_la==T__11 || _la==T__12) {
					{
					setState(139);
					((ObjectivePercentileContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==T__11 || _la==T__12) ) {
						((ObjectivePercentileContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
				}

				setState(142);
				var_name();
				setState(143);
				match(T__13);
				setState(144);
				integerLiteral();
				setState(145);
				match(T__8);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_declContext extends ParserRuleContext {
		public Token constraint;
		public List<Constraint_argumentContext> constraint_argument() {
			return getRuleContexts(Constraint_argumentContext.class);
		}
		public Constraint_argumentContext constraint_argument(int i) {
			return getRuleContext(Constraint_argumentContext.class,i);
		}
		public Constraint_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitConstraint_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constraint_declContext constraint_decl() throws RecognitionException {
		Constraint_declContext _localctx = new Constraint_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constraint_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__14);
			setState(150);
			constraint_argument();
			setState(151);
			((Constraint_declContext)_localctx).constraint = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__17))) != 0)) ) {
				((Constraint_declContext)_localctx).constraint = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(152);
			constraint_argument();
			setState(153);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constraint_argumentContext extends ParserRuleContext {
		public Token decision;
		public Token option;
		public List<TerminalNode> StringLiteral() { return getTokens(ModelParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(ModelParser.StringLiteral, i);
		}
		public Constraint_argumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_argument; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitConstraint_argument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constraint_argumentContext constraint_argument() throws RecognitionException {
		Constraint_argumentContext _localctx = new Constraint_argumentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constraint_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			((Constraint_argumentContext)_localctx).decision = match(StringLiteral);
			setState(158);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(156);
				match(T__18);
				setState(157);
				((Constraint_argumentContext)_localctx).option = match(StringLiteral);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Quality_var_declContext extends ParserRuleContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public Quality_var_defContext quality_var_def() {
			return getRuleContext(Quality_var_defContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public Quality_var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quality_var_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitQuality_var_decl(this);
			else return visitor.visitChildren(this);
		}
	}
